Add new domain for handling file import
