# internal/feature/server/helper.go
@@ -2,10 +2,8 @@ package server
 
 import (
 	"errors"
-	"net"
 	"strconv"
 
-	"github.com/HenryNg101/server-management-system/internal/model"
 	"github.com/gin-gonic/gin"
 )
 
@@ -67,47 +65,4 @@ func ParseServersQuery(c *gin.Context) (GetServersQuery, error) {
 	query.Order = c.DefaultQuery("order", "asc")
 
 	return query, nil
-}
-
-func mapRow(headers, row []string) map[string]string {
-	m := make(map[string]string)
-	for i := range headers {
-		m[headers[i]] = row[i]
-	}
-	return m
-}
-
-func parseServer(record map[string]string) (*model.Server, error) {
-	name := record["name"]
-	if name == "" {
-		return nil, errors.New("name is required")
-	}
-
-	status, err := strconv.ParseBool(record["status"])
-	if err != nil {
-		return nil, errors.New("invalid status")
-	}
-
-	ip := record["ipv4_address"]
-	if net.ParseIP(ip) == nil {
-		return nil, errors.New("invalid IP")
-	}
-
-	port, err := strconv.Atoi(record["port"])
-	if err != nil || port < 0 || port > 65535 {
-		return nil, errors.New("invalid port")
-	}
-
-	protocol := record["protocol"]
-	if protocol == "" {
-		protocol = "tcp"
-	}
-
-	return &model.Server{
-		Name:        name,
-		Status:      status,
-		IPv4Address: ip,
-		Port:        uint(port),
-		Protocol:    protocol,
-	}, nil
 }
